syntax = "proto3";

package sample.pet.v1;

option java_multiple_files = true;
option java_package = "com.freemanan.sample.pet.v1";

import "validate/validate.proto";

message Person {
  string name = 1 [(validate.rules).string = {
    max_len: 10
  }];
  int32 age = 2;
  repeated string hobbies = 3;
}

message GetPersonRequest {
  string name = 1;
}

message GetPersonResponse {
  Person person = 1;
}

service PersonService {
  rpc GetPerson(GetPersonRequest) returns (GetPersonResponse);
}
