syntax = "proto3";

package sample.pet.v1;

option java_multiple_files = true;
option java_package = "com.freemanan.sample.pet.v1";

import "validate/validate.proto";

message Pet {
  string name = 1 [(validate.rules).string = {
    max_len: 10
  }];
  int32 age = 2;
  repeated string favorite_foods = 3;
}

message GetPetRequest {
  string name = 1;
}

service PetService {
  rpc GetPet(GetPetRequest) returns (Pet);
}
